--- a/FlaskApplication/templates/index.html
+++ b/FlaskApplication/templates/index.html
@@ -41,12 +41,13 @@
                 </td>
             </tr>
         </table>
+    </div>
 
         <div id="mymodal" class="modal fade" role="dialog">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <button type="button" class="close" data-dismiss="modal" data-target="#exampleModal">&times;</button>
                         <h4 class="modal-title">Inserir dado</h4>
                     </div>
                     <div class="modal-body">
@@ -74,7 +75,8 @@
                 </div>
             </div>
         </div>
-    {% endblock %}
+    
+{% endblock %}
 
     <div class="card">
         <div class="card-body d-flex justify-content-between">
@@ -82,6 +84,7 @@
             <span>Marcelo Yuri dará 10</span>
         </div>
     </div>
+</div>
 
     <script type="text/javascript" src="{{url_for('static',filename='js/jquery-3.7.1.min.js')}}"></script>
     <script type="text/javascript" src="{{url_for('static',filename='js/bootstrap.min.js')}}"></script>
