--- a/db_front_and_back/templates/table.html
+++ b/db_front_and_back/templates/table.html
@@ -17,10 +17,13 @@
 
       <div class="table_border">
 
-        <div class="h1_repbtn_container" style="display: flex;">        
+        <div class="h1_repbtn_container" style="display: flex;">       
           <h1 style="color: black;font-size: 40px; font-weight: bold;">Biblioteca</h1>
           <button class="btn btn-ghost"style="margin-bottom: 25px;"><svg xmlns="http://www.w3.org/2000/svg" width="1.8rem" height="1.8rem" viewBox="0 0 32 32"><path fill="#434242" d="M10 18h8v2h-8zm0-5h12v2H10zm0 10h5v2h-5z"/><path fill="#434242" d="M25 5h-3V4a2 2 0 0 0-2-2h-8a2 2 0 0 0-2 2v1H7a2 2 0 0 0-2 2v21a2 2 0 0 0 2 2h18a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2M12 4h8v4h-8Zm13 24H7V7h3v3h12V7h3Z"/></svg>
           </button>
+          <button type="button" class="btn btn-ghost" style="display: flex;float: right; gap: 30rem;" data-target="#modalAdicionarLivro">
+            Add
+          </button> 
         </div>        
         <div class="search_bar">
           <label class="input input-bordered flex items-center gap-2" style="width: 100%;" >
@@ -30,13 +33,14 @@
           <button class="btn btn-neutral" onclick="search();" class="search_btn" id="searchButton" style="margin-bottom: 25px;">Search</button>
         </div>
 
+
         {% if data %}
 
         <div class="table_container">
 
          <table class="table" id="change" border="1">
           <thead>
-
+              
             <tr>
               <th scope="col/" style="color: black;">id_livro</th>
               <th scope="col" style="color: black;">Autor</th>
@@ -49,15 +53,17 @@
           <tbody id="search">
             {% for rows in data %}
             <tr>
-              <td>{{rows.id_livro}}</td>
-              <td>{{rows.autor}}</td>
-              <td>{{rows.titulo}}</td>
-              <td>{{rows.genero}}</td>
-              <td>
-                <button class="btn btn-square btn-ghost" class="edit_btn">
+              <form id="update-form-{{ rows.id_livro }}">
+                <td name="id_deletado">{{rows.id_livro}}</td>
+                
+                <td>{{rows.autor}}</td>
+                <td>{{rows.titulo}}</td>
+                <td>{{rows.genero}}</td>
+                <td>
+                <button class="btn btn-square btn-ghost" class="edit_btn" onclick="openModal('{{rows.id_livro}}', '{{ rows.autor | tojson | safe }}', '{{ rows.titulo | tojson | safe }}', '{{ rows.genero | tojson | safe }}')">
                   <svg xmlns="http://www.w3.org/2000/svg" width="1.8rem" height="1.8rem" viewBox="0 0 24 24"><path fill="#434242" d="M15.748 2.947a2 2 0 0 1 2.828 0l2.475 2.475a2 2 0 0 1 0 2.829L9.158 20.144l-6.38 1.076l1.077-6.38zm-.229 3.057l2.475 2.475l1.643-1.643l-2.475-2.474zm1.06 3.89l-2.474-2.475l-8.384 8.384l-.503 2.977l2.977-.502z"/></svg>
                 </button>
-                <button type="submit" class="btn btn-square btn-ghost" class="remove_btn">
+                <button type="submit" class="btn btn-square btn-ghost" class="remove_btn" onclick="delete_livro('{{ rows.id_livro }}');">
                   <svg xmlns="http://www.w3.org/2000/svg" width="1.4rem" height="1.4rem" viewBox="0 0 16 16"><path fill="#434242" fill-rule="evenodd" d="M5.75 3V1.5h4.5V3zm-1.5 0V1a1 1 0 0 1 1-1h5.5a1 1 0 0 1 1 1v2h2.5a.75.75 0 0 1 0 1.5h-.365l-.743 9.653A2 2 0 0 1 11.148 16H4.852a2 2 0 0 1-1.994-1.847L2.115 4.5H1.75a.75.75 0 0 1 0-1.5zm-.63 1.5h8.76l-.734 9.538a.5.5 0 0 1-.498.462H4.852a.5.5 0 0 1-.498-.462z" clip-rule="evenodd"/></svg>
                 </button>
               </td>
@@ -65,16 +71,47 @@
             </tr>
             {% endfor %}
           </tbody>
-        </table> 
+        </table>
+        <!-- Modal DaisyUI para adicionar livro -->
+        <!-- Modal de Atualização -->
+        <div class="modal" id="updateModal">
+          <div class="modal-box">
+            <h3 class="font-bold text-lg">Atualizar Livro</h3>
+            <form id="updateForm">
+              <div class="form-control">
+                <label class="label">
+                  <span class="label-text">Autor</span>
+                </label>
+                <input type="text" id="autorInput" name="autor" class="input input-bordered">
+              </div>
+              <div class="form-control">
+                <label class="label">
+                  <span class="label-text">Título</span>
+                </label>
+                <input type="text" id="tituloInput" name="titulo" class="input input-bordered">
+              </div>
+              <div class="form-control">
+                <label class="label">
+                  <span class="label-text">Gênero</span>
+                </label>
+                <input type="text" id="generoInput" name="genero" class="input input-bordered">
+              </div>
+              <input type="hidden" id="idLivroInput" name="id_livro">
+              <div class="modal-action">
+                <button type="button" onclick="updateLivro()" class="btn">Salvar</button>
+                <button type="button" onclick="closeModal()" class="btn">Fechar</button>
+              </div>
+            </form>
+          </div>
         </div>
-      </div>
-    </div>
-  </div>
+
   {% else %}
   <p>No results found.</p>
   {% endif %}
 
-  <script src="static\js\functions.js"></script>
+  <script src="static\js\search.js"></script>
+  <script src="static\js\delete.js"></script>
+  <script src="static\js\update.js"></script>
 
 </body>
 </html>
